# knowrob_k4r

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
docker/: .env  Dockerfile  Old_Dockerfile  docker-compose.yml  entrypoint.bash  run_knowrob_k4r.sh  test.py  test.sh
docker/images/init_image/: Dockerfile  entrypoint.bash  init.py  mongorestore.bash
docker/images/knowrob_image/: Dockerfile  entrypoint.bash  test.py
include/knowrob_k4r/: kafka_event_producer.h
launch/: fridge.launch  knowrob_k4r.launch  knowrob_k4r_local.launch
owl/: fridge.owl
src/: README.md  __init__.pl  customer.pl  products.pl  purchase.pl  shop.pl
src/K4R_DEV_CERTs/: dev-2022.p12  sandbox-2022.p12
src/db/: README.md  __init__.pl
src/db/k4r_db/: __init__.pl  client.pl  k4r_db_client.pl  k4r_db_client.plt  k4r_db_kb.cpp  k4rdb_kb.cpp  triples.pl
src/db/k4r_db/Entities/: CharacteristicController.cpp  CustomerController.cpp  DataController.cpp  DeliveryController.cpp  DeviceController.cpp  EntityController.cpp  FacingController.cpp  ItemController.cpp  ItemGroupController.cpp  LogisticalUnitController.cpp  MaterialGroupController.cpp  PlanogramController.cpp  ProductCharacteristicController.cpp  ProductController.cpp  ProductGroupController.cpp  ProductGtinController.cpp  ProductPropertyController.cpp  PropertyController.cpp  ShelfController.cpp  ShelfLayerController.cpp  ShoppingBasketController.cpp  ShoppingBasketPositionController.cpp  StoreController.cpp  StorePropertyController.cpp  Test  Test.cpp
src/db/k4r_db/Entities/K4R_DEV_CERTs/: k4r-dev-keystore.p12
src/db/k4r_db/GraphQl/: GraphQlController.cpp
src/db/k4r_db/Tutorials/: CharacteristicTutorial.cpp  CustomerTutorial.cpp  ProductTutorial.cpp  PropertyTutorial.cpp  ShelfLayerTutorial.cpp  ShelfTutorial.cpp  ShoppingBasketTutorial.cpp  StoreTutorial.cpp  Test
src/db/k4r_db/Utilities/: environment.cpp
src/db/linkeddata/: __init__.pl  linkeddata_plugin.pl
src/db/sap/: sap_plugin.pl  sap_plugin.plt
src/k4r_db/: __init__.pl  k4r_db_client.pl  k4r_db_client.plt  k4r_db_kb.cpp
src/k4r_db/Entities/: CustomerController.cpp  DataController.cpp  ItemGroupController.cpp  PlanogramController.cpp  ProductCharacteristicController.cpp  ProductDescriptionController.cpp  ProductGtinController.cpp  ProductPropertyController.cpp  ProductUnitController.cpp  ShelfLayerController.cpp  StoreCharacteristicController.cpp  StoreController.cpp  StoreObjectController.cpp
src/k4r_db/GraphQl/: GraphQlController.cpp
src/k4r_db/K4R_DEV_CERTs/: k4r-sandbox-client.p12
src/k4r_db/Utilities/: environment.cpp  useful_functions.cpp
src/pa4/: __init__.pl  environment.pl  environment.plt  init_store.pl  kafka_event_producer.cpp  kafka_plugin.cpp  kafka_publisher.cpp  pa4_db_client.pl  pa4_db_client.plt  platform_store.pl  sensor_data_input.cpp  shopping.pl  shopping.plt  user_defined_environment.pl  utils.pl
src/ros/: __init__.pl
urdf/: dm_room.urdf  dm_shelf_macros.urdf  dm_shelf_macros.urdf.xacro  fridge.urdf  fridge.urdf.xacro  fridge_area.urdf
