<?xml version="1.0"?>
<package format="2">
  <name>knowrob_k4r</name>
  <version>0.0.0</version>
  <description>The knowrob_k4r package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="giangnguyen@todo.todo">giangnguyen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>knowrob</build_depend>
  <build_depend>knowrob_stocktaking</build_depend>
  <build_export_depend>knowrob</build_export_depend>
  <exec_depend>knowrob</exec_depend>

  <depend>rosprolog</depend>
  <depend>roslib</depend>
  <depend>roscpp</depend>
  <depend>swi-prolog</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
